--- a/domain-server/resources/web/web-new/package.json
+++ b/domain-server/resources/web/web-new/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@quasar/extras": "^1.0.0",
+        "@types/axios": "^0.14.0",
         "axios": "^0.21.4",
         "core-js": "^3.6.5",
         "js-sha256": "^0.9.0",
